footer and basic style added

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,119 @@
+@use './partials/variables.scss' as *;
 @import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '@fortawesome/fontawesome-free/scss/solid.scss';
 
 @import 'bootstrap/scss/bootstrap';
+
+
+
+body{
+    background-color: $orange;
+}
+
+
+main{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+}
+
+nav{
+  background-color: $pink;
+  height:100px;
+}
+
+.nav-link{
+  color:$blue;
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.wrapper{
+    overflow-y: scroll;
+    height:100%;
+}
+.root-color {
+    background-color: $pink;
+}
+
+.root-color a:hover{
+    color:$yellow;
+    transition: 0.5s;
+}
+
+.links{
+    color:$yellow;
+}
+
+.btn-yellow{
+    background-color:$yellow;
+}
+.btn-yellow:hover{
+    background-color:$blue;
+}
+.btn-blue{
+    background-color:$blue;
+}
+
+#app{
+  height:100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main p{
+    font-size: 2rem;
+}
+
+footer .links i:hover{
+    color:$blue;
+    transition:0.5s;
+}
+
+::-webkit-scrollbar {
+    width: 1px;
+  }
+
+  footer,header{
+    width:100%;
+    margin:0;
+    padding:0;
+    height: 100px;
+  }
+
+  .homepage a{
+    color:black;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 1.4rem;
+  }
+
+  .homepage a:hover{
+    font-size: 1.6rem;
+    transition: 0.5s;
+  }
+
+  .link{
+    color:black;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 1.2rem;
+  }
+
+  .link:hover{
+    color:$blue;
+    transition: 0.5s;
+  }
+
+  .create-btn{
+    background-color: $blue;
+  }
+
+  .thumb{
+    max-width:500px;
+  }
+
+  .tiny-icon{
+    height:30px;
+  }
